<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/dashboardFragment"
        android:checkable="true"
        android:contentDescription="@string/dashboard"
        android:icon="@drawable/ic_home"
        android:title="@string/dashboard" />

    <item
        android:id="@+id/expensesFragment"
        android:checkable="true"
        android:contentDescription="@string/expenses"
        android:icon="@drawable/ic_swap_horizontal_circle"
        android:title="@string/expenses" />

    <item
        android:id="@+id/budgetFragment"
        android:checkable="true"
        android:contentDescription="@string/budget"
        android:icon="@drawable/ic_savings"
        android:title="@string/budget" />

    <item
        android:id="@+id/profileFragment"
        android:checkable="true"
        android:contentDescription="@string/profile"
        android:icon="@drawable/ic_account_circle"
        android:title="@string/profile" />

</menu>