<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clipToPadding="false"
    android:paddingVertical="30dp">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/expenseCategoryIcon"
        style="?attr/materialIconButtonFilledTonalStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:clickable="false"
        android:contentDescription="@string/expense_category_icon"
        android:focusable="false"
        android:longClickable="false"
        app:icon="@drawable/ic_tag"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/categoryDetailLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/expenseCategoryIcon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/expenseCategoryIcon"
        app:layout_constraintTop_toTopOf="@id/expenseCategoryIcon">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv0"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/nunito_semibold"
            android:text="@string/select"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/nunito_semibold"
            android:text="@string/category"
            android:textColor="@color/primary_text"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv0" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/expenseDetailLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/expenseCategoryIcon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/expenseCategoryIcon"
        app:layout_constraintTop_toTopOf="@id/expenseCategoryIcon">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/nameTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:fontFamily="@font/nunito"
            android:textColor="@color/primary_text"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@id/priceTV"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Acquisto" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/dateTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/nunito"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/nameTV"
            tools:text="01/01/2000" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/priceTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/nunito"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@id/dateTV"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/nameTV"
            tools:text="€ 0.00" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:dividerInsetEnd="16dp"
        app:dividerInsetStart="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/expenseCategoryIcon" />

    <GridLayout
        android:id="@+id/editCategoryLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:columnCount="3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/housingTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:background="?attr/selectableItemBackground"
            android:drawableTop="@drawable/ic_baseline_home"
            android:drawablePadding="10dp"
            android:fontFamily="@font/nunito"
            android:paddingVertical="15dp"
            android:text="@string/housing"
            android:textAlignment="center"
            android:textSize="14sp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/groceriesTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:background="?attr/selectableItemBackground"
            android:drawableTop="@drawable/ic_shopping_cart"
            android:drawablePadding="10dp"
            android:fontFamily="@font/nunito"
            android:paddingVertical="15dp"
            android:text="@string/groceries"
            android:textAlignment="center"
            android:textSize="14sp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/personal_careTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:background="?attr/selectableItemBackground"
            android:drawableTop="@drawable/ic_self_care"
            android:drawablePadding="10dp"
            android:fontFamily="@font/nunito"
            android:paddingVertical="15dp"
            android:text="@string/personal_care"
            android:textAlignment="center"
            android:textSize="14sp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/entertainmentTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:background="?attr/selectableItemBackground"
            android:drawableTop="@drawable/ic_theater_comedy"
            android:drawablePadding="10dp"
            android:fontFamily="@font/nunito"
            android:paddingVertical="15dp"
            android:text="@string/entertainment"
            android:textAlignment="center"
            android:textSize="14sp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/educationTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:background="?attr/selectableItemBackground"
            android:drawableTop="@drawable/ic_school"
            android:drawablePadding="10dp"
            android:fontFamily="@font/nunito"
            android:paddingVertical="15dp"
            android:text="@string/education"
            android:textAlignment="center"
            android:textSize="14sp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/diningTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:background="?attr/selectableItemBackground"
            android:drawableTop="@drawable/ic_restaurant"
            android:drawablePadding="10dp"
            android:fontFamily="@font/nunito"
            android:paddingVertical="15dp"
            android:text="@string/dining"
            android:textAlignment="center"
            android:textSize="14sp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/healthTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:background="?attr/selectableItemBackground"
            android:drawableTop="@drawable/ic_vaccines"
            android:drawablePadding="10dp"
            android:fontFamily="@font/nunito"
            android:paddingVertical="15dp"
            android:text="@string/health"
            android:textAlignment="center"
            android:textSize="14sp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/transportationTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:background="?attr/selectableItemBackground"
            android:drawableTop="@drawable/ic_directions_transit"
            android:drawablePadding="10dp"
            android:fontFamily="@font/nunito"
            android:paddingVertical="15dp"
            android:text="@string/transportation"
            android:textAlignment="center"
            android:textSize="14sp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/miscellaneousTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:background="?attr/selectableItemBackground"
            android:drawableTop="@drawable/ic_tag"
            android:drawablePadding="10dp"
            android:fontFamily="@font/nunito"
            android:paddingVertical="15dp"
            android:text="@string/miscellaneous"
            android:textAlignment="center"
            android:textSize="14sp" />

    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>