<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingVertical="30dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/menuIcon"
            style="?attr/materialIconButtonFilledTonalStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:clickable="false"
            android:contentDescription="@string/filter"
            android:focusable="false"
            android:longClickable="false"
            app:icon="@drawable/ic_filter_list_filled"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv0"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/nunito_semibold"
            android:text="@string/select"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/menuIcon"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/nunito_semibold"
            android:text="@string/filter"
            android:textColor="@color/primary_text"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/menuIcon"
            app:layout_constraintTop_toBottomOf="@id/tv0" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="15dp"
        app:dividerInsetEnd="16dp"
        app:dividerInsetStart="16dp" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/categoryTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:drawableStart="@drawable/ic_grid_3x3_filled"
        android:drawablePadding="20dp"
        android:fontFamily="@font/nunito"
        android:gravity="center_vertical"
        android:paddingHorizontal="30dp"
        android:paddingVertical="15dp"
        android:text="@string/category"
        android:textColor="@color/primary_text"
        android:textSize="16sp" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/dateRangeTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:drawableStart="@drawable/ic_today_outline"
        android:drawablePadding="20dp"
        android:fontFamily="@font/nunito"
        android:gravity="center_vertical"
        android:paddingHorizontal="30dp"
        android:paddingVertical="15dp"
        android:text="@string/date_range"
        android:textColor="@color/primary_text"
        android:textSize="16sp" />

</LinearLayout>